--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "parcel-project-template",
     "version": "2.0.0",
     "description": "",
-    "homepage": "https://DiChag.github.io/kopypasters",
+    "homepage": "https://AndriiFyl.github.io/filmoteka_team-project_JS",
     "scripts": {
         "start": "parcel src/*.html",
-        "build": "parcel build src/*.html --public-url /kopypasters/"
+        "build": "parcel build src/*.html --public-url /filmoteka_team-project_JS/"
     },
     "repository": {
         "type": "git",
